--- a/Cab-booking-api/pom.xml
+++ b/Cab-booking-api/pom.xml
@@ -77,7 +77,11 @@
 			<artifactId>json</artifactId>
 			<version>20201115</version>
 		</dependency>
-
+		<dependency>
+			<groupId>org.slf4j</groupId>
+			<artifactId>slf4j-simple</artifactId>
+			<version>1.7.21</version>
+		</dependency>
 	</dependencies>
 
 </project>
